--- a/app/src/main/res/layout/activity_perfil_barberia.xml
+++ b/app/src/main/res/layout/activity_perfil_barberia.xml
@@ -11,9 +11,8 @@
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/logo_name"
         android:text="@string/tv_perfil"
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,9 +25,8 @@
         android:id="@+id/textView12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/logo_name"
         android:text="Foto mas reciente"
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.053"
@@ -40,9 +38,8 @@
         android:id="@+id/textView13"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/logo_name"
         android:text="Promocion actual"
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.942"
@@ -66,9 +63,9 @@
         android:id="@+id/textView14"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/logo_name"
         android:text="Direccion"
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
+        android:textColorHint="#101010"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.046"
@@ -92,9 +89,9 @@
         android:id="@+id/textView15"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/logo_name"
         android:text="Coacalco de Berriozabal, Numero 65"
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
+        android:textColorHint="#101010"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.111"
@@ -106,9 +103,8 @@
         android:id="@+id/textView16"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/logo_name"
         android:text="Opiniones mas recientes"
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.046"
@@ -118,9 +114,9 @@
 
     <Button
         android:id="@+id/btn_promocion_actual"
+        style="@style/diseño_botones"
         android:layout_width="129dp"
         android:layout_height="66dp"
-        android:background="@drawable/design_buttons"
         android:text="@string/btn_promocion_actual"
         android:textSize="8sp"
         app:backgroundTint="@null"
@@ -135,9 +131,9 @@
 
     <Button
         android:id="@+id/btn_ver_catalogo"
+        style="@style/diseño_botones"
         android:layout_width="126dp"
         android:layout_height="67dp"
-        android:background="@drawable/design_buttons"
         android:onClick="irCatalogo"
         android:text="@string/btn_ver_catalogo"
         android:textSize="10sp"
@@ -153,11 +149,11 @@
 
     <Button
         android:id="@+id/btn_tomar_foto_local"
+        style="@style/diseño_botones"
         android:layout_width="134dp"
         android:layout_height="62dp"
         android:layout_marginStart="31dp"
         android:layout_marginTop="65dp"
-        android:background="@drawable/design_buttons"
         android:onClick="tomarFoto"
         android:text="Contribuye"
         android:textSize="8sp"
@@ -176,7 +172,7 @@
         android:layout_width="105dp"
         android:layout_height="22dp"
         android:text="¿Estas ahi?"
-        android:textColor="#FAFAFA"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.973"
