--- a/app/src/main/res/layout/activity_perfil_locales.xml
+++ b/app/src/main/res/layout/activity_perfil_locales.xml
@@ -9,8 +9,9 @@
 
     <ImageView
         android:id="@+id/img_Local_Perfil_Locales"
-        android:layout_width="363dp"
-        android:layout_height="230dp"
+        android:layout_width="304dp"
+        android:layout_height="244dp"
+        android:background="@drawable/diseno_txt"
         android:importantForAccessibility="no"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,6 +28,7 @@
         android:layout_height="50dp"
         android:onClick="streetview"
         android:text="Ubicacion"
+        android:textColor="#000000"
         android:textSize="13dp"
         android:textStyle="bold|italic"
         app:backgroundTint="@null"
@@ -47,6 +49,7 @@
         android:layout_height="50dp"
         android:onClick="llamarTelefono"
         android:text="Telefono"
+        android:textColor="#000000"
         android:textSize="13dp"
         android:textStyle="bold|italic"
         app:backgroundTint="@null"
@@ -67,6 +70,7 @@
         android:layout_height="50dp"
         android:onClick="mandarCorreo"
         android:text="Mandar correo"
+        android:textColor="#000000"
         android:textSize="13dp"
         android:textStyle="bold|italic"
         app:backgroundTint="@null"
@@ -87,6 +91,7 @@
         android:layout_height="50dp"
         android:onClick="abrirPagina"
         android:text="Redes sociales"
+        android:textColor="#000000"
         android:textSize="13dp"
         android:textStyle="bold|italic"
         app:backgroundTint="@null"
@@ -107,7 +112,8 @@
         android:background="@drawable/dis_back_txt"
         android:gravity="center"
         android:textColor="#000000"
-        android:textSize="20sp"
+        android:textSize="25dp"
+        android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -116,6 +122,7 @@
 
     <TextView
         android:id="@+id/txt_nombre_local_perfil_locales"
+        style="@style/diseño_botones"
         android:layout_width="335dp"
         android:layout_height="41dp"
         android:layout_marginStart="38dp"
@@ -123,7 +130,8 @@
         android:background="@drawable/dis_txt"
         android:gravity="center"
         android:textColor="#000000"
-        android:textSize="24sp"
+        android:textSize="13dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -136,6 +144,7 @@
         android:layout_width="140dp"
         android:layout_height="50dp"
         android:text="Ver Fotos"
+        android:textColor="#000000"
         android:textSize="13dp"
         app:icon="@drawable/fto"
         app:iconSize="24dp"
@@ -152,7 +161,9 @@
         style="@style/diseño_botones"
         android:layout_width="140dp"
         android:layout_height="50dp"
+        android:onClick="verOpiniones"
         android:text="Ver opiniones"
+        android:textColor="#000000"
         android:textSize="13dp"
         app:icon="@android:drawable/stat_notify_chat"
         app:iconSize="24dp"
