--- a/app/src/main/res/layout/activity_publicar_anuncio.xml
+++ b/app/src/main/res/layout/activity_publicar_anuncio.xml
@@ -11,9 +11,9 @@
         android:id="@+id/textView23"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/logo_name"
         android:text="Publica tu anuncio"
-        android:textColor="#F8F4F4"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
         android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,15 +24,18 @@
 
     <Button
         android:id="@+id/button8"
+        style="@style/diseño_botones"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/design_buttons"
-        android:fontFamily="@font/logo_name"
         android:onClick="irPublicarAnuncio"
         android:text="Publicar"
         android:textColor="#000000"
         android:textSize="24sp"
         app:backgroundTint="@null"
+        app:icon="@drawable/publi"
+        app:iconGravity="end"
+        app:iconSize="30dp"
+        app:iconTint="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,9 +45,9 @@
         android:id="@+id/textView24"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/logo_name"
         android:text="Nombre del anuncio"
-        android:textColor="#F8F4F4"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -61,7 +64,8 @@
         android:hint="Tacos 2x1"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        android:textColorHint="#F8F1F1"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.174"
@@ -73,10 +77,10 @@
         android:id="@+id/textView25"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/logo_name"
         android:hint="Efe"
         android:text="Metodo pago"
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -92,8 +96,8 @@
         android:hint="Efectivo, tarjeta"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        android:textColor="#F8F4F4"
-        android:textColorHint="#F8F1F1"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.194"
@@ -105,9 +109,9 @@
         android:id="@+id/textView26"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/logo_name"
         android:text="Tiempo de anuncio"
-        android:textColor="#F6F6F6"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -124,7 +128,8 @@
         android:hint="1:00"
         android:inputType="time"
         android:minHeight="48dp"
-        android:textColorHint="#F8F1F1"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.194"
@@ -136,9 +141,9 @@
         android:id="@+id/textView27"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/logo_name"
         android:text="Notas u observaciones"
-        android:textColor="#F6F6F6"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -156,7 +161,8 @@
         android:hint="Escribe un mensaje"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        android:textColorHint="#F8F1F1"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.174"
