--- a/app/src/main/res/layout/activity_selecciona_usuario.xml
+++ b/app/src/main/res/layout/activity_selecciona_usuario.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fondo"
+    android:background="@drawable/background_screens"
     tools:context=".seleccionaUsuario">
 
     <TextView
@@ -12,11 +12,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/img_selecciona_usuario_imgCliente"
-        android:fontFamily="@font/logo_name"
         android:onClick="interfazNegocio"
         android:text="@string/mensaje_bienvenida_selecciona_usuario"
         android:textColor="#0E0E0E"
-        android:textSize="34sp"
+        android:textSize="30dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -28,11 +28,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/img_selecciona_usuario_imgCliente"
-        android:fontFamily="@font/logo_name"
         android:onClick="interfazNegocio"
         android:text="@string/selecciona_tu_usuario"
         android:textColor="#0E0E0E"
-        android:textSize="24sp"
+        android:textSize="30dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -43,11 +43,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/img_selecciona_usuario_imgCliente"
-        android:fontFamily="@font/logo_name"
         android:onClick="interfazNegocio"
         android:text="@string/selecciona_usuario_Cliente"
         android:textColor="#070707"
-        android:textSize="20sp"
+        android:textSize="30dp"
+        android:textStyle="italic"
         app:layout_constraintBottom_toTopOf="@+id/img_cliente_selec_usu"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -60,11 +60,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/img_selecciona_usuario_imgCliente"
-        android:fontFamily="@font/logo_name"
         android:onClick="interfazNegocio"
         android:text="@string/selecciona_usuario_negocio"
         android:textColor="#070707"
-        android:textSize="20sp"
+        android:textSize="30dp"
+        android:textStyle="italic"
         app:layout_constraintBottom_toTopOf="@+id/img_negocio_selec_usu"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -72,9 +72,10 @@
 
     <ImageView
         android:id="@+id/img_negocio_selec_usu"
+        style="@style/diseño_botones"
         android:layout_width="255dp"
         android:layout_height="174dp"
-        android:background="@drawable/fondo_letras"
+        android:background="@drawable/dis_back_txt"
         android:contentDescription="@string/selec_usu_negocio"
         android:onClick="interfazNegocio"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -85,11 +86,13 @@
 
     <ImageView
         android:id="@+id/img_cliente_selec_usu"
+        style="@style/diseño_botones"
         android:layout_width="255dp"
         android:layout_height="174dp"
-        android:background="@drawable/fondo_letras"
+        android:background="@drawable/dis_back_txt"
         android:contentDescription="@string/img_selec_usu_img_cliente"
         android:onClick="interfazUsuario"
+        app:backgroundTint="@null"
         app:layout_constraintBottom_toTopOf="@+id/textView11"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
